Fix: Prevent select options being cut off when accordion is open

--- a/AccordionGroup/resources/assets/css/accordion-group.css
+++ b/AccordionGroup/resources/assets/css/accordion-group.css
@@ -47,7 +47,6 @@
 /** Main form body class */
 .accordion-field__body {
   max-height: 0;
-  overflow: hidden;
   background: #fff;
 }
 
